--- a/configs/sim_config.cfg
+++ b/configs/sim_config.cfg
@@ -66,7 +66,7 @@
     "seed": 123,
     "time_step_penalty": 0,
     "use_safe_action": false,
-    "use_safety_layer": false, 
+    "use_safety_layer": false
   },
   "sl_config": {
     "batch_size": 256,
