--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,6 @@ backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.1
 cachetools==4.2.4
-certifi @ file:///croot/certifi_1671487769961/work/certifi
 cffi==1.15.1
 charset-normalizer==2.1.1
 clang==5.0
@@ -76,6 +75,7 @@ matplotlib==3.6.2
 matplotlib-inline==0.1.6
 mistune==2.0.4
 msgpack==1.0.4
+mypy-extensions==0.4.3
 nbclassic==0.4.8
 nbclient==0.7.2
 nbconvert==7.2.7
@@ -90,11 +90,13 @@ nvidia-cuda-nvrtc-cu11==11.7.99
 nvidia-cuda-runtime-cu11==11.7.99
 nvidia-cudnn-cu11==8.5.0.96
 oauthlib==3.2.2
+opencv-python==4.7.0.68
 opt-einsum==3.3.0
 packaging==22.0
 pandas==1.4.4
 pandocfilters==1.5.0
 parso==0.8.3
+pathspec==0.10.3
 pathtools==0.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -111,6 +113,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pybullet==3.2.0
 pycparser==2.21
+pygame==2.4.0
 pyglet==1.5.27
 Pygments==2.13.0
 pyparsing==3.0.9
@@ -136,6 +139,7 @@ rfc3986-validator==0.1.1
 rsa==4.9
 scikit-image==0.19.3
 scipy==1.9.3
+seaborn==0.12.2
 Send2Trash==1.8.0
 sentry-sdk==1.12.1
 shortuuid==1.0.11
@@ -159,6 +163,7 @@ termcolor-whl==1.1.2
 terminado==0.17.1
 tifffile==2022.10.10
 tinycss2==1.2.1
+tomli==2.0.1
 torch==1.13.1
 torch-tb-profiler==0.4.0
 torchaudio==0.13.1
